--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -23,13 +23,19 @@
 <!-- body started -->
 <body class="container-fluid">
 	<!-- The upper part (above horizontal line) -->
-	<header>
-		<img class="pull-left img-responsive logo" src="images/logo.svg" alt="Image of My logo">
-		<h1 class="title text-right">Naren Bakshi</h1>
-	 	<h3 class="title text-right">Web Developer</h3>
+	<header class="row">
+		<div class="col-md-12">
+			<img class="pull-left img-responsive logo" src="images/logo.svg" alt="Image of My logo">
+			<h1 class="title text-right">Naren Bakshi</h1>
+		 	<h3 class="title text-right">Web Developer</h3>
+		 </div>
 	</header>
 	
-	<hr>
+	<div class="row">	
+		<div class="col-md-12">
+			<hr>
+		</div>
+	</div>
 
 	<!-- cover image and work part -->
 	<main>
@@ -67,7 +73,11 @@
 		</section>
 	</main>
 
-	<hr>
+	<div class="row">	
+		<div class="col-md-12">
+			<hr>
+		</div>
+	</div>
 	
 	<!-- Contact me -->
 	<footer class="row">
@@ -78,7 +88,7 @@
 			<li><a target="_blank" href="https://plus.google.com/+NarenBakshi97"><i class="fa fa-google-plus fa-2x"></i></a></li>
 		</ul>
 
-		<cite class="text-right">Made as a part of Udacity project</cite>
+		<cite class="text-right col-md-12">Made as a part of Udacity project</cite>
 	</footer>
 </body>
 </html>
